--- a/AutoCADIOUtil/packages.config
+++ b/AutoCADIOUtil/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK" version="2.3.5.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
-  <package id="RestSharp" version="105.0.0" targetFramework="net45" />
-  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="AWSSDK" version="2.3.55.0" targetFramework="net45" />
+  <package id="Microsoft.OData.Client" version="6.15.0" targetFramework="net45" />
+  <package id="Microsoft.OData.Core" version="6.15.0" targetFramework="net45" />
+  <package id="Microsoft.OData.Edm" version="6.15.0" targetFramework="net45" />
+  <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
 </packages>
